# clear

./: Cargo.toml  README.md
demo/: README.md  clear.toml
demo/src/: clear_demo.clr
docs/: 01.get_started.md
specs/: 01.presentation.md  02.functionnalities.md
specs/demo/: README.md  clear.toml
src/: ast.rs  clear.rs  config.rs  log.rs  main.rs  parser-clear.pest  parser.rs
src/ast/: kind.rs  mod.rs
src/parser/: grammar.pest  mod.rs
