[package]
name = "clear"
version = "0.1.0"
authors = ["Mathieu D. <mathieu.delacroix.fr@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.91" #
serde_derive = "1.0.91" #
serde_json = "1.0.39" #
clap = "2.33.0" # In order to build our binary as a cli
regex = "1.3.1" # Because regexp
toml = "0.5.5" # User to read the Clear.toml config file
pest = "2.1.2" # Used to parse Clear code
pest_derive = "2.1.0" # Used to parse Clear code
